--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.0.13",
-    "framer-motion": "^10.15.1",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
+    "dns": "^0.2.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.15.1",
+    "fs": "^0.0.1-security",
     "intl-messageformat": "^10.1.0",
+    "mongodb": "^5.8.1",
+    "mongoose": "^7.5.0",
     "next": "13.4.13",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
